--- a/src/components/Feature.css
+++ b/src/components/Feature.css
@@ -1,5 +1,6 @@
 .feature {
-    margin-top: 5rem;
+    padding-top: 5rem;
+    background-color: beige;
 }
 
 .feature .feature-text {
