--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,6 +1,6 @@
 .hero {
     background-color: rgba(0, 0, 0, .5);
-    color: #fff;
+    color: #ffffff;
     height: 80vh;
     width: 100%;
     position: relative;
