--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -43,7 +43,7 @@
 
 @media screen and (max-width:940px) {
     .hamburger{
-        display: none;
+        display: block;
     }
     .navbar .nav-menu{
         position: absolute;
@@ -51,8 +51,9 @@
         flex-direction: column;
         align-items: center;
         top: 90px;
-        right: -100%;
-        height: 100%;
+        right: 100%;
+        min-height: 100%;
+        float:left;
         width: 100%;
         background-color: rgba(255, 255, 255, .98);
         z-index: 10;
@@ -60,6 +61,7 @@
     }
     .navbar .active {
         right:0;
+        
     }
 
     .navbar .nav-menu li a {
